--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "init-db": "node scripts/init-database.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -32,7 +31,8 @@
   ],
   "authors": [
     "Christana Hliana",
-    "Papatheodoropoulos Panagiotis"
+    "Papatheodoropoulos Panagiotis",
+    "Barkonikos Grigorios"
   ],
   "license": "MIT"
 }
